--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-bootstrap": "^0.23.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
     "superagent": "^3.1.0",
     "webpack": "^1.13.3"
   }
