--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "bookphonia",
   "version": "1.0.0",
   "description": "Playing around with the Spotify Api, AWS Lambda, React-Redux, and algorithms.",
-  "scripts": {},
+  "scripts": {
+    "clean": "rm -rf dist",
+    "build": "npm run clean && webpack -p",
+    "serve": "webpack-dev-server"
+  },
   "dependencies": {
     "express": "^4.15.3",
+    "html-webpack-plugin": "^2.29.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
