--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "redux": "^3.7.0"
+    "redux": "^3.7.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
